# AGH-Solar-Boat-Team---zadanie-programistyczne---rekrutacja

./: CMakeLists.txt  README.md  main.cpp
include/: zadanie.h
src/: zadanie.cpp
